add form entry for address to latlong

--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,3 +1,8 @@
-<p>
-  user-form works!
-</p>
+<h1>Address to Lat/Long Entry</h1>
+<div>
+<form class="form-group">
+  <label>Enter an address, spaces included, no zip</label>
+  <input #newAddress>
+  <button (click)="getLatlongFromAddress(newAddress.value)">Get Lat/Long</button>
+</form>
+</div>
